- Added DatabaseSettings Model and Interface - Added the values for the Database settings in appsettings.json - Added a secrets file for the connection string - Added DI in the Program.cs for the DatabaseSettings and interface - Added BsonElement attribute to all properties in the models - Modified TaskService to read/add to the database rather than local list

--- a/Task-Management.csproj
+++ b/Task-Management.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Task_Management</RootNamespace>
+    <UserSecretsId>1db46d1b-3ff3-4554-8d5a-9796d29ce6a2</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
