--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DatabaseSettings": {
+    "DatabaseName": "TaskManagementDb",
+    "TasksCollectionName": "Tasks"
+  },
   "AllowedHosts": "*"
 }
