--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
   },
   "DatabaseSettings": {
     "DatabaseName": "TaskManagementDb",
-    "TasksCollectionName": "Tasks"
+    "TasksCollectionName": "Tasks",
+    "UsersCollectionName": "Users"
   },
   "AllowedHosts": "*"
 }
