- Added Database Settings for new Collection called TaskHistory - Made small changes to the Models - Added a method that creates a new task history item and it's called in the Add and Update Task methods

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,8 @@
   "DatabaseSettings": {
     "DatabaseName": "TaskManagementDb",
     "TasksCollectionName": "Tasks",
-    "UsersCollectionName": "Users"
+    "UsersCollectionName": "Users",
+    "TasksHistoryCollectionName": "TasksHistory"
   },
   "AllowedHosts": "*"
 }
